KAS-3594 Replace Auk::Button & ButtonLink instances + general styling improvements (part 3)

--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -54,8 +54,8 @@
   <td>
     <WebComponents::AuButtonToolbar>
       {{#if (not @isEditingEnabled)}}
-        <AuButton
-          @skin="naked"
+        <AuLink
+          @skin="button-naked"
           @icon="book"
           @hideText={{true}}
           @href={{@row.piece.viewDocumentURL}}
