--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -131,12 +131,12 @@
     </Utils::LoadableContent>
   </Auk::Modal::Body>
   <Auk::Modal::Footer @onCancel={{@onClose}}>
-    <Auk::Button
+    <AuButton
       @skin="primary"
       @disabled={{not this.isValid}}
       {{on "click" this.triggerGenerateReport}}
     >
       {{t "publications-reports--generate--small"}}
-    </Auk::Button>
+    </AuButton>
   </Auk::Modal::Footer>
 </Auk::Modal>
