--- a/app/components/publications/overview/reports/reports-panel-entry.hbs
+++ b/app/components/publications/overview/reports/reports-panel-entry.hbs
@@ -11,20 +11,23 @@
             user=@lastJob.generatedBy.fullName
           }}
         </div>
-          <Auk::ButtonLink
+          <AuLink
             @icon="download"
             @href={{@lastJob.generated.namedDownloadLink}}
             download
           >
             {{@lastJob.generated.downloadFilename}}
-          </Auk::ButtonLink>
+          </AuLink>
       </div>
     {{/if}}
   </div>
   <div>
-    <Auk::Button {{on "click" this.openGenerateReportModal}}>
+    <AuButton
+      @skin="primary"
+      {{on "click" this.openGenerateReportModal}}
+    >
       {{t "generate-report"}}
-    </Auk::Button>
+    </AuButton>
   </div>
 </Auk::Panel::Body>
 
