--- a/app/components/publications/publication/case/contact-persons/contact-persons-panel.hbs
+++ b/app/components/publications/publication/case/contact-persons/contact-persons-panel.hbs
@@ -11,12 +11,14 @@
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <Auk::Button
-              @skin="tertiary" @icon="plus"
+            <AuButton
+              data-test-contact-persons-view-add
+              @skin="naked"
+              @icon="plus"
               {{on "click" this.openAddModal}}
-              data-test-contact-persons-view-add>
+            >
               {{t "add-contact"}}
-            </Auk::Button>
+            </AuButton>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
@@ -52,10 +54,16 @@
                   {{/if}}
                 </td>
                 <td class="auk-u-text-align--right">
-                  <Auk::Button
+                  <AuButton
                     data-test-contact-persons-row-delete
-                    @layout="icon-only" @icon="trash" @skin="danger-borderless"
-                    {{on "click" (fn this.delete contactPerson)}} />
+                    @skin="naked"
+                    @alert={{true}}
+                    @icon="trash"
+                    @hideText={{true}}
+                    {{on "click" (fn this.delete contactPerson)}}
+                  >
+                    {{t "delete"}}
+                  </AuButton>
                 </td>
               </tr>
             {{/each}}
