--- a/app/components/utils/back-button.hbs
+++ b/app/components/utils/back-button.hbs
@@ -1,5 +1,4 @@
-{{!-- TODO: octane-refactor, fix accessibility concern --}}
-{{!-- template-lint-disable no-action no-invalid-interactive --}}
-<div data-test-auk-back-button class="u-padding--left--small auk-u-cursor-pointer" {{action "goToParentRoute"}}>
-  <Auk::Icon @name="chevron-left" />
-</div>
+<Auk::Button @skin="borderless" data-test-auk-back-button {{on "click" this.goToParentRoute}}>
+  <Auk::Icon @name="hierarchical-back" />
+  <span class="au-u-hidden-visually">Terug</span>
+</Auk::Button>
