--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -18,12 +18,14 @@
             >
               {{t "manage-ministers"}}
             </Auk::Tab>
-            <Auk::Tab
-              @route="settings.users"
-              data-test-route-settings-manage-users
-            >
-              {{t "manage-users"}}
-            </Auk::Tab>
+            {{#if (user-may "manage-users")}}
+              <Auk::Tab
+                @route="settings.users"
+                data-test-route-settings-manage-users
+              >
+                {{t "manage-users"}}
+              </Auk::Tab>
+            {{/if}}
           </Auk::Tabs>
         </Auk::Toolbar::Item>
       </Auk::Toolbar::Group>
