--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -43,7 +43,7 @@
             <th></th>
           </c.header>
           <c.body as |user|>
-            <td>
+            <td data-test-route-settings-users-row-name>
               <span class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
                 {{user.fullName}}
               </span>
