KAS-1652 use relations in template instead of local variable

--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -1,5 +1,11 @@
 <div
-  class={{if this.isAgendaitemPostponedOrRetracted "auk-u-opacity--1/3"}}
+  class={{if
+    (or
+      this.decisionActivity.decisionResultCode.isPostponed
+      this.decisionActivity.decisionResultCode.isRetracted
+    )
+    "auk-u-opacity--1/3"
+  }}
   {{in-viewport
     onEnter=(perform this.lazyLoadSideData)
     onExit=this.cancelLazyLoad
