--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -124,10 +124,17 @@
               </AuPill>
             </div>
           {{/if}}
-          {{#if this.agendaitemDecisionResult.isPostponed}}
+          {{#if this.decisionActivity.decisionResultCode.isPostponed}}
             <div class="auk-u-mt-2">
               <AuPill @size="small">
                 {{t "postponed-item"}}
+              </AuPill>
+            </div>
+          {{/if}}
+          {{#if this.decisionActivity.decisionResultCode.isRetracted}}
+            <div class="auk-u-mt-2">
+              <AuPill @size="small">
+                {{t "retracted-item"}}
               </AuPill>
             </div>
           {{/if}}
