--- a/app/components/publications/publication/case/inscription/inscription-panel.hbs
+++ b/app/components/publications/publication/case/inscription/inscription-panel.hbs
@@ -87,7 +87,7 @@
                   @layout="icon-right"
                   @icon="chevron-right"
                   @route="cases.case.subcases"
-                  @model={{@publicationFlow.case.id}}
+                  @model={{@publicationFlow.case.decisionmakingFlow.id}}
                 >
                   {{t "to-case"}}
                 </Auk::Button>
