feat: load deprecated government domains when generating report pre 2022

--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -69,6 +69,8 @@
             min={{this.publicationYearMin}}
             max={{this.publicationYearMax}}
             {{on "focusout" this.loadMandateePersons}}
+            {{on "focusout" (perform this.loadGovernmentDomains)}}
+            {{on "change" (perform this.loadGovernmentDomains)}}
           />
         </div>
       {{/if}}
