--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -10,13 +10,43 @@
           <p class="auk-u-text-pre-line auk-alert__message">{{t "postponed-item"}}</p>
         </div>
       </div>
-      {{!-- <Auk::dropdownMenu
-        @skin="primary"
-        @label={{"Opnieuw agenderen"}}
-      /> --}}
+      {{!-- TODO KAS-3565 figure out a way to know if already reproposed--}}
+      {{!-- Maybe if there is only 1 activity then always ok , with multiple ones,
+        check if there is a activity with a startdate greater then meeting planned start? 
+        or just the last thing? should always work.
+      --}}
+      {{!-- {{#if this.meeting.internalDecisionPublicationActivity.startDate}} --}}
+      {{#if true}}
+        <Auk::DropdownMenu
+          @skin="primary"
+          @label={{"Opnieuw agenderen"}}
+        as |Menu|>
+        {{#if this.proposableMeetings.length}}
+          {{#each this.proposableMeetings as |meeting|}}
+            <Menu.Item
+              {{on "click" (fn this.reProposeForAgenda meeting)}}
+            >
+              {{t "agenda-for"}}
+              {{moment-format meeting.plannedStart "DD MMMM YYYY"}}
+              {{concat " - " meeting.numberRepresentation}}
+            </Menu.Item>
+          {{/each}}
+          {{else}}
+          laden
+          {{/if}}
+          {{!-- {{#if (gt this.proposableMeetings.length 0)}}
+            <Menu.Divider />
+          {{/if}} --}}
+          {{!-- <Menu.Item {{on "click" (fn this.proposeForOtherAgenda this.subcase)}}>
+            {{t "other-agenda"}}
+          </Menu.Item> --}}
+        </Auk::DropdownMenu>
+      {{/if}}
     </div>
   {{/if}}
 {{/let}}
+
+{{!-- TODO KAS-3565 separate component for this alert and co? getting a bit much --}}
 
 <Auk::Toolbar class="auk-u-mb-4" as |Toolbar|>
   <Toolbar.Group @position="left" as |Group|>
