Fix Cypress tests

--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -80,6 +80,7 @@
                   @icon="chevron-right"
                   @route="settings.users.user"
                   @model={{user.id}}
+                  data-test-button-user-detail
                 />
               </div>
             </td>
